--- a/assets/style-pagamento.css
+++ b/assets/style-pagamento.css
@@ -68,14 +68,30 @@ body {
     flex-direction: column;
 }
 
+#search-placa{
+    width: 450px;
+    margin: 20px 5px 0 60px;
+    display: inline-block;
+}
 
+#search-section {
+    margin-bottom: 20px;
+}
+
+#search-button {
+    width: 40px;
+    height: 38px;
+    display: inline-block;
+    vertical-align: top;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 20px 0;
+}
 
 #card-pagamento{
-    background-color: #D9D9D9;
-    /* border: red 1px solid; */
-    width: 80%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    border-radius: 10px;
     display: flex;
 }
 
@@ -93,22 +109,34 @@ body {
     margin-left: 10%;
 }
 #botoes{
-    background-color: #D9D9D9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    width: 80%;
+    margin: 50px 20px 20px 20px;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    height: 25%;
     align-items: center;
+
 }
 
-#pix , #credito, #debito, #dinheiro{
-    background-color: #fff;
-    width: 50px;
-    width: 20%;
-    border: none;
-    height: 5%;
-    height: 50px;
+#logo{
+    width: 450px;
+}
 
+#botoes button {
+    margin: 10px;
+    width: 200px;
+    height: 50px;
+    padding: 15px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+#pix:hover, #credito:hover, #debito:hover, #dinheiro:hover {
+    opacity: 0.9;
+}
+
+#bloco-pagamento{
+    background-color: #D9D9D9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
